tests/health/gold/sdk/lib__drivers__monarch.toit.gold
<sdk>/drivers/sequans_cellular.toit:467:30: error: Super of a class must be a class
class Interface_ extends net.Interface:
                             ^~~~~~~~~
<sdk>/at/session.toit:117:14: error: Can't instantiate abstract class
        i := int.parse_ line index end --on_error=: null
             ^~~
<sdk>/at/session.toit:117:17: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
        i := int.parse_ line index end --on_error=: null
                ^
<sdk>/drivers/cellular_base.toit:89:34: warning: Class 'COPS' is deprecated
      result := session.send COPS.scan
                                 ^
<sdk>/drivers/cellular_base.toit:97:11: warning: Class 'Operator' is deprecated
          Operator o[3] --rat=rat
          ^~~~~~~~
<sdk>/drivers/cellular_base.toit:112:26: warning: Class 'COPS' is deprecated
        session.send COPS.automatic
                         ^
<sdk>/drivers/cellular_base.toit:123:34: warning: Class 'COPS' is deprecated
        res := (session.send COPS.read).last
                                 ^
<sdk>/drivers/cellular_base.toit:125:18: warning: Class 'Operator' is deprecated
          return Operator res[2]
                 ^~~~~~~~
<sdk>/drivers/cellular_base.toit:129:25: warning: Class 'COPS' is deprecated
    at_.do: it.send COPS.deregister
                        ^
<sdk>/drivers/cellular_base.toit:145:24: warning: Class 'CFUN' is deprecated
      session.send CFUN.online
                       ^
<sdk>/drivers/cellular_base.toit:152:22: warning: Class 'CFUN' is deprecated
    session.send CFUN.offline
                     ^
<sdk>/drivers/cellular_base.toit:155:32: warning: Class 'CFUN' is deprecated
    result := session.send CFUN.get
                               ^
<sdk>/drivers/cellular_base.toit:262:15: warning: Class 'COPS' is deprecated
          COPS.manual operator.op --timeout=timeout --rat=operator.rat
              ^
<sdk>/drivers/sequans_cellular.toit:337:23: warning: Class 'CFUN' is deprecated
          it.send CFUN.offline
                      ^
<sdk>/drivers/sequans_cellular.toit:359:22: warning: Class 'CFUN' is deprecated
    session.send CFUN.airplane
                     ^
<sdk>/drivers/sequans_cellular.toit:371:30: warning: Class 'CFUN' is deprecated
            session.send CFUN.online
                             ^
<sdk>/drivers/sequans_cellular.toit:392:18: warning: Class 'Operator' is deprecated
      operator = Operator operator.op
                 ^~~~~~~~
<sdk>/drivers/sequans_cellular.toit:454:5: warning: Deprecated 'SequansCellular.on_reset'
    on_reset session
    ^~~~~~~~
<sdk>/drivers/sequans_cellular.toit:461:5: error: Type mismatch. Expected 'Interface'. Got 'Interface_'
    return Interface_ this
    ^~~~~~
<sdk>/drivers/sequans_cellular.toit:495:15: warning: Class 'UdpSocket' is deprecated
    socket := UdpSocket cellular_ id port
              ^~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:501:15: warning: Class 'TcpSocket' is deprecated
    socket := TcpSocket cellular_ id address
              ^~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:200:5: warning: Deprecated 'Socket_.socket_call'
    socket_call: | session/at.Session |
    ^~~~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:229:9: warning: Deprecated 'Socket_.socket_call'
        socket_call: | session/at.Session |
        ^~~~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:125:9: warning: Deprecated 'Socket_.socket_call'
        socket_call: | session/at.Session |
        ^~~~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:142:7: warning: Deprecated 'Socket_.socket_call'
      socket_call:
      ^~~~~~~~~~~
<sdk>/drivers/monarch.toit:21:5: warning: Class 'SequansCellular' is deprecated
    super uart --logger=logger --default_baud_rate=921600 --use_psm=false
    ^~~~~
<sdk>/drivers/sequans_cellular.toit:93:5: warning: Deprecated 'Socket_.socket_call'
    socket_call: | session/at.Session |
    ^~~~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:284:21: warning: Class 'SequansConstants' is deprecated
      --constants = SequansConstants
                    ^~~~~~~~~~~~~~~~
<sdk>/drivers/sequans_cellular.toit:283:5: warning: Class 'CellularBase' is deprecated
    super uart at_session
    ^~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
<sdk>/at/session.toit:117:18: error: Class 'int' does not have any method 'parse_'
        i := int.parse_ line index end --on_error=: null
                 ^~~~~~
<sdk>/drivers/cellular.toit:112:12: warning: Class 'GnssLocation' is deprecated
    return GnssLocation
           ^~~~~~~~~~~~
